--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -114,7 +114,8 @@ a.badge-secondary{
 }
 
 [data-bs-theme="dark"] .badge-secondary {
-  border: 1px solid #fff !important;
+  color: #020202 !important;
+  border: none !important;
 }  
 
 
@@ -305,6 +306,10 @@ iframe.twitter-tweet,
 body[data-bs-theme="dark"] .twitter-tweet .text-dark{
   color: var(--bs-secondary-color) !important;
   font-weight: bold;
+}
+
+body[data-bs-theme="dark"] .twitter-tweet .card-footer{
+  background: var(--bs-body-bg) !important;
 }
 
 body.page-template-template-submit-your-bot{
